<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/magnify"
        android:title="@string/search"
        android:iconifiedByDefault="true"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:visible="false" />

    <item
        android:id="@+id/sort_by_date"
        android:title="@string/sort_by_date"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/sort_by_alphabet"
        android:icon="@drawable/sort_alphabetical"
        android:title="@string/sort_by_title"
        android:iconifiedByDefault="true"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
